syntax = "proto3";

package pb;

option go_package = "github.com/Banana-Boat/gRPC-template/pb";

import "user.proto";

/* login */
message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string token = 2;
}

/* regiser */
message RegisterRequest {
  string username = 1;
  string password = 2;
  string gender = 3;
  int32 age = 4;
}

message RegisterResponse {
  User user = 1;
}